--- a/_config.yml
+++ b/_config.yml
@@ -96,14 +96,14 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/karths8"
+  github           : "karths8"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/karthik-suresh-3240/"
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "karthik-suresh-3240/"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : 
